<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/Theme.Dropex"
    tools:context=".screens.LoginScreen">

    <TextView
        style="@style/HeadingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center" />

    <androidx.cardview.widget.CardView
        style="@style/InputCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <EditText
            android:id="@+id/usernameET"
            style="@style/BodyText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        style="@style/InputCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <EditText
            android:id="@+id/passwordET"
            style="@style/BodyText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:elevation="5dp"
        android:text="@string/submit"
        android:theme="@style/Button"
        app:cornerRadius="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="Don't have an account?"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/register"
            style="@style/BodyText.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:focusable="true"
            android:text="@string/register"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>