<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:theme="@style/Theme.Dropex"
    tools:context=".screens.RegisterScreen">

    <TextView
        style="@style/HeadingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/register" />

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        style="@style/InputCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="20dp">

        <EditText
            android:id="@+id/editTextUsername"
            style="@style/BodyText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_margin="2dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:inputType="textPersonName"
            android:background="@null"
            android:autofillHints=""
            android:hint="@string/username"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        style="@style/InputCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="20dp">

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/BodyText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_margin="2dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:inputType="textPassword"
            android:background="@null"
            android:autofillHints=""
            android:hint="@string/password"/>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:theme="@style/Button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        app:cornerRadius="15dp"
        android:elevation="5dp"
        android:text="@string/submit"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            style="@style/BodyText"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Already have an account?" />

        <TextView
            android:id="@+id/login"
            style="@style/BodyText.Bold"
            android:focusable="true"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>