<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Dropex"
    tools:context=".screens.PaymentGatewayScreen">

    <include
        android:id="@+id/appBar"
        layout="@layout/action_bar" />

    <TextView
        style="@style/HeadingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="Order Summary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp">

            <TextView
                style="@style/SubHeadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Items" />

            <com.example.dropex.customComponents.WrappingGridView
                android:id="@+id/summaryItemsGV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:numColumns="1"
                android:scrollbars="none"
                android:verticalSpacing="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/SubHeadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Deliver To" />

            <TextView
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/SubHeadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Payment" />

            <androidx.cardview.widget.CardView
                style="@style/InputCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/editTextCardNumber"
                    style="@style/BodyText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:autofillHints=""
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/card_number"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/InputCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="20dp"
                    card_view:cardElevation="4dp"
                    card_view:cardUseCompatPadding="true">

                    <EditText
                        android:id="@+id/editTextCardExpiry"
                        style="@style/BodyText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="2dp"
                        android:autofillHints=""
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/cary_expiry"
                        android:inputType="textPersonName"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/InputCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="20dp"
                    card_view:cardElevation="4dp"
                    card_view:cardUseCompatPadding="true">

                    <EditText
                        android:id="@+id/editTextCVVCode"
                        style="@style/BodyText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="2dp"
                        android:autofillHints=""
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/cvv"
                        android:inputType="textPersonName"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkoutBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/pay"
        android:theme="@style/Theme.Dropex"
        card_view:cornerRadius="20dp" />

</LinearLayout>